use sass for styling

--- a/Natours/starter/css/style.css
+++ b/Natours/starter/css/style.css
@@ -160,7 +160,7 @@ body {
   transition: all 0.4s;
 }
 
-.btn-white::after {
+.btn--white::after {
   background-color: #fff;
 }
 
@@ -169,7 +169,7 @@ body {
   opacity: 0;
 }
 
-.btn-animated {
+.btn--animated {
   animation: moveInBottom 0.5s ease-out 0.75s;
   animation-fill-mode: backwards; /* automatically applies the properties of 0% to the start of the animation */
 }
